--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Star Wars</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaquery.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
 
@@ -28,6 +29,9 @@
                     </ul>
             </nav>
         </div>
+        <span class="material-symbols-outlined">menu</span>
+
+        
     </header>
 
     <!--SLIDE-->
